<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.4.5</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.example</groupId>
	<artifactId>news-summary</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>news-summary</name>
	<description>Demo project for Spring Boot</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<java.version>17</java.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>
		
		<dependency>
		    <groupId>org.springframework.boot</groupId>
		    <artifactId>spring-boot-starter-web</artifactId>
		</dependency>

	    <!-- Spring Security -->
	    <dependency>
	        <groupId>org.springframework.boot</groupId>
	        <artifactId>spring-boot-starter-security</artifactId>
	    </dependency>
	
	    <!-- Spring Security에서 사용할 PasswordEncoder (BCrypt) -->
	    <dependency>
	        <groupId>org.springframework.security</groupId>
	        <artifactId>spring-security-crypto</artifactId>
	    </dependency>
	
	    <!-- JSON 직렬화/역직렬화를 위한 Jackson -->
	    <dependency>
	        <groupId>com.fasterxml.jackson.core</groupId>
	        <artifactId>jackson-databind</artifactId>
	    </dependency>
    		
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>
		
		<!-- Bean Validation -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>

        <!-- JSoup (HTML 파싱용) -->
        <dependency>
            <groupId>org.jsoup</groupId>
            <artifactId>jsoup</artifactId>
            <version>1.17.1</version>
        </dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		
		<!-- Selenium -->
	  <dependency>
	    <groupId>org.seleniumhq.selenium</groupId>
	    <artifactId>selenium-java</artifactId>
	    <version>4.19.1</version>
	  </dependency>
	  
	  <dependency>
	    <groupId>net.dankito.readability4j</groupId>
	    <artifactId>readability4j</artifactId>
	    <version>1.0.8</version>
	</dependency>
	
	  <!-- MySQL JDBC -->
	  <dependency>
	    <groupId>com.mysql</groupId>
	    <artifactId>mysql-connector-j</artifactId>
	    <version>8.4.0</version>
	  </dependency>
	
	  <!-- Spring Data JPA -->
	  <dependency>
	    <groupId>org.springframework.boot</groupId>
	    <artifactId>spring-boot-starter-data-jpa</artifactId>
	  </dependency>
	  <dependency>
	  	<groupId>com.example.community.rest</groupId>
	  	<artifactId>community-rest</artifactId>
	  	<version>0.0.1-SNAPSHOT</version>
	  </dependency>
	  
	  <!-- JJWT API -->
	  <dependency>
	    <groupId>io.jsonwebtoken</groupId>
	    <artifactId>jjwt-api</artifactId>
	    <version>0.11.5</version>
	  </dependency>
	
	  <!-- JJWT 구현체 (runtimeOnly에 해당) -->
	  <dependency>
	    <groupId>io.jsonwebtoken</groupId>
	    <artifactId>jjwt-impl</artifactId>
	    <version>0.11.5</version>
	    <scope>runtime</scope>
	  </dependency>
	
	  <!-- JSON 처리용 Jackson 연동 -->
	  <dependency>
	    <groupId>io.jsonwebtoken</groupId>
	    <artifactId>jjwt-jackson</artifactId>
	    <version>0.11.5</version>
	    <scope>runtime</scope>
	  </dependency>
	  
	  <!-- WebDriverManager 의존성 추가 -->
	  <dependency>
	    <groupId>io.github.bonigarcia</groupId>
	    <artifactId>webdrivermanager</artifactId>
	    <version>6.2.0</version>
	  </dependency>
	  
	  <dependency>
		  <groupId>org.springframework.boot</groupId>
		  <artifactId>spring-boot-starter-data-redis</artifactId>
	  </dependency>
	  
	  <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-webflux -->
		<dependency>
		    <groupId>org.springframework.boot</groupId>
		    <artifactId>spring-boot-starter-webflux</artifactId>
		</dependency>
		
		<dependency>
		    <groupId>org.projectlombok</groupId>
		    <artifactId>lombok</artifactId>
		    <version>1.18.34</version>
		    <scope>provided</scope>
		</dependency>
		
		<!-- Flyway (MySQL 지원 포함) -->
		<dependency>
		  <groupId>org.flywaydb</groupId>
		  <artifactId>flyway-core</artifactId>
		  <version>10.22.0</version>
		</dependency>
		<dependency>
		  <groupId>org.flywaydb</groupId>
		  <artifactId>flyway-mysql</artifactId>
		  <version>10.22.0</version>
		</dependency>
	
		 <!-- Excel Export용 Apache POI -->
	    <dependency>
	        <groupId>org.apache.poi</groupId>
	        <artifactId>poi-ooxml</artifactId>
	        <version>5.2.5</version> <!-- 최신 안정버전 기준 -->
	    </dependency>
	    
	    <dependency>
		    <groupId>com.github.librepdf</groupId>
		    <artifactId>openpdf</artifactId>
		    <version>1.3.39</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>

</project>
